Enabling debugging for remote WL.